# statevector-simulator

./: .gitignore  Cargo.toml  README.md
src/: classical_bit.rs  classical_register.rs  config.rs  gate.rs  lib.rs  quantum_register.rs  qubit.rs  simulator.rs
tests/: web.rs
www/: bench.js  bootstrap.js  index-javascript.js  index.html  index.js  package-lock.json  package.json  test.js  webpack.config.js
