[package]
name = "statevector-simulator"
description = "Ideal Quantum Computer Statevector Simulator for circuit like programs"
version = "0.1.0"
authors = ["Juan Gomez <atilag@gmail.com>"]
edition = "2018"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }
serde = { version = "1.0.95", features = ["derive"] }

serde_json = "1.0.40"
serde_derive = "1.0.95"
wasm-bindgen = {version = "^0.2", features = ["serde-serialize"]}
wasm-bindgen-test = "0.2.48"
web-sys = { version = "0.3.25", features = ['console'] }
nalgebra = "0.18.0"
rand = "0.7.0"
meval = "0.2.0"
nalgebra-glm = "0.4.0"
num = "0.2.0"

[dev-dependencies]
wasm-bindgen-test = "0.2"


[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
